# Desktop-Pet-Launcher

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: pages.yml  release.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: PetWindow.tsx  SettingsWindow.tsx
src/lib/: petContract.ts  settings.ts  tauriApi.ts  usePetAnimation.ts
website/: app.js  gallery-base.css  gallery-browser.css  gallery-content.css  gallery-responsive.css  gallery.css  gallery.js  index.html  landing-base.css  landing-content.css  landing-download.css  landing-features.css  landing-responsive.css  landing.css  styles.css
website/gallery/: index.html
website/gallery-data/: index.json
website/gallery-data/pets/venti-bard/: pet.json
